--- a/index.html
+++ b/index.html
@@ -16,8 +16,83 @@
 </head>
 <body>
     <header class="jumbotron landing-page">
+            <nav class="navbar navbar-expand-lg navbar-light bg-transparent dream-nav">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                      <ul class="navbar-nav dream-ul">
+                        <li class="nav-item active">
+                          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </nav>
 
     </header>
+    <!--FOOTER STARTS HERE-->
+    <footer class="container-fluid dream-footer">
+      <hr id="footer-line" class="mb-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3">
+            <h3 id="footer-brand">
+              DREAMSHARE
+            </h3>
+          </div>
+          <div class="col-lg-3">
+            <h4 class="footer-heading">
+              Company
+            </h4>
+            <ul class="footer-list mt-4">
+              <li class="footer-list-item mb-1"><a href="">About</a></li>
+              <li class="footer-list-item mb-1"><a href="">Contact</a></li>
+              <li class="footer-list-item mb-1"><a href="">Press</a></li>
+              <li class="footer-list-item mb-1"><a href="">Blog</a></li>
+              <li class="footer-list-item mb-1"><a href="">Terms and Privacy</a></li>
+              <li class="footer-list-item mb-1"><a href="">Help</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+            <h4 class="footer-heading">
+              Activities
+            </h4>
+            <ul class="footer-list mt-4">
+              <li class="footer-list-item mb-1"><a href="">Sports</a></li>
+              <li class="footer-list-item mb-1"><a href="">Wellness and Health</a></li>
+              <li class="footer-list-item mb-1"><a href="">Expeditions</a></li>
+              <li class="footer-list-item mb-1"><a href="">Games</a></li>
+              <li class="footer-list-item mb-1"><a href="">Culture and Education</a></li>
+              <li class="footer-list-item mb-1"><a id ="viewlink"href="">View All</a></li>
+            </ul>
+          </div>
+          <div class="col-lg-3">
+            <h4 class="footer-heading">
+              Contact Us
+            </h4>
+            <ul class="footer-list mt-4">
+              <li class="footer-list-item mb-1"><a href="">Tel: (000) 000-000</a></li>
+              <li class="footer-list-item mb-1"><a href="">Email: dreamshare@email.com</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- this is so cool -->
+      <!-- I wrote on your code while we recording  -->
+      <!-- all the best for your projects and future bro -->
+
+    </footer>
+    <!--FOOTER ENDS HERE-->
     
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
