first row of gallery section.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,30 @@
                   </nav>
 
     </header>
+    <!--IMAGE GALLERY STARTS HERE-->
+    <section class="container gallery-section my-3">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h3 class="gallery-heading">Discover holiday activity ideas</h3>
+        </div>
+      </div>
+      <div class="row gallery-row1">
+        <div class="col-lg-4 px-3 py-3 image-container">
+          <img src="/images/block1Sports.jpg">
+        </div>
+        <div class="col-lg-4 px-3 py-3 image-container">
+            <img src="/images/block2Wellness.jpg">
+        </div>
+        <div class="col-lg-4 px-3 py-3 image-container">
+            <img src="/images/block3Expeditions.jpg">
+        </div>
+
+
+      </div>
+      
+
+    </section>
+    <!--IMAGE GALLERY ENDS HERE-->
     <!--FOOTER STARTS HERE-->
     <footer class="container-fluid dream-footer">
       <hr id="footer-line" class="mb-4">
