--- a/index.html
+++ b/index.html
@@ -40,26 +40,54 @@
                   </nav>
 
     </header>
+    <!--About US SECTION STARTS HERE-->
+    <section class="container about-us-section my-3">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="gallery-heading">Meet a partner for your best holiday</h2>
+        </div>
+      </div>
+    </section>
+    <!--ABOUT US SECTION ENDS HERE-->
     <!--IMAGE GALLERY STARTS HERE-->
     <section class="container gallery-section my-3">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h3 class="gallery-heading">Discover holiday activity ideas</h3>
+          <h2 class="gallery-heading">Discover holiday activity ideas</h2>
         </div>
       </div>
       <div class="row gallery-row1">
-        <div class="col-lg-4 px-3 py-3 image-container">
-          <img src="/images/block1Sports.jpg">
+        <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
+          <a href=""> <img src="/images/block1Sports.jpg"></a>
+          <h3 class="image-heading text-center">Sports</h3>
         </div>
-        <div class="col-lg-4 px-3 py-3 image-container">
-            <img src="/images/block2Wellness.jpg">
+        <div class=" col-md-4 col-lg-4 px-3 py-3 image-container">
+            <a href=""><img src="/images/block2Wellness.jpg"></a>
+            <h3 class="image-heading text-center">Wellness and Health</h3>
         </div>
-        <div class="col-lg-4 px-3 py-3 image-container">
-            <img src="/images/block3Expeditions.jpg">
+        <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
+            <a href=""><img src="/images/block3Expeditions.jpg"></a>
+            <h3 class="image-heading text-center">Expeditions</h3>
         </div>
-
+        <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
+            <a href=""><img src="/images/block4Games.jpg"></a>
+            <h3 class="image-heading text-center">Games</h3>
+        </div>
+        <div class="col-md-8 col-lg-8 px-3 py-3 image-container">
+            <a href=""><img src="/images/block5Culture.jpg"></a>
+            <h3 class="image-heading text-center">Culture and Education</h3>
+        </div>
+        <div class="col-md-8 col-lg-8 px-3 py-3 image-container">
+            <a href=""><img src="/images/block6Beauty.jpg"></a>
+            <h3 class="image-heading text-center">Beauty and Relaxation</h3>
+        </div>
+        <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
+            <a href=""><img src="/images/block7Travelling.jpg"></a>
+            <h3 class="image-heading text-center">Travelling</h3>
+        </div>
 
       </div>
+
       
 
     </section>
