moved partner images to images folder.

--- a/index.html
+++ b/index.html
@@ -47,6 +47,25 @@
           <h2 class="gallery-heading">Meet a partner for your best holiday</h2>
         </div>
       </div>
+      <div class="container about-us-container">
+        <div class="row">
+          <div class="col-lg-3 partner-container">
+            <div class="image-parent">
+                <img src="/images/partner1.jpg" alt="Partner 1">
+            </div>
+           
+            <p class="partner-name text-hunter">Bradley Hunter</p>
+
+          </div>
+          <div class="col-lg-3 partner-container">
+
+          </div>
+          <div class="col-lg-3 partner-container">
+
+          </div>
+          <div class="col-lg-3 partner-container"></div>
+        </div>
+      </div>
     </section>
     <!--ABOUT US SECTION ENDS HERE-->
     <!--IMAGE GALLERY STARTS HERE-->
