bradley image styled.

--- a/index.html
+++ b/index.html
@@ -49,12 +49,15 @@
       </div>
       <div class="container about-us-container">
         <div class="row">
-          <div class="col-lg-3 partner-container">
-            <div class="image-parent">
-                <img src="/images/partner1.jpg" alt="Partner 1">
+          <div class="col-md-3 col-lg-3 partner-container">
+            <div class="partner-image-parent">
+                <img class="partner-image"src="/images/partner1.jpg" alt="Partner 1">
+                <div id="svgp1" class="partner-svg">
+                  <img src="/images/music.svg" alt="music">
+                </div>
             </div>
-           
-            <p class="partner-name text-hunter">Bradley Hunter</p>
+            <p class="partner-name text-center my-3">Bradley Hunter</p>
+            <p class="partner-bio text-center my-3">Based in Chicago. I love playing Tennis and loud music.</p>
 
           </div>
           <div class="col-lg-3 partner-container">
