partner section functional. touches will be made.

--- a/index.html
+++ b/index.html
@@ -50,23 +50,55 @@
       <div class="container about-us-container">
         <div class="row">
           <div class="col-md-3 col-lg-3 partner-container">
-            <div class="partner-image-parent">
+            <div class="partner-image-parent px-4 py-4">
                 <img class="partner-image"src="/images/partner1.jpg" alt="Partner 1">
                 <div id="svgp1" class="partner-svg">
                   <img src="/images/music.svg" alt="music">
                 </div>
             </div>
-            <p class="partner-name text-center my-3">Bradley Hunter</p>
+            <p class="partner-name text-center mb-3">Bradley Hunter</p>
             <p class="partner-bio text-center my-3">Based in Chicago. I love playing Tennis and loud music.</p>
 
           </div>
-          <div class="col-lg-3 partner-container">
+          <div class="col-md-3 col-lg-3 partner-container">
+              <div class="partner-image-parent px-4 py-4">
+                  <img class="partner-image"src="/images/partner2.jpg" alt="Partner 1">
+                  <div id="svgp2" class="partner-svg">
+                    <img src="/images/brush.svg" alt="brush">
+                  </div>
+              </div>
+              <p class="partner-name text-center mb-3">Marie Benett</p>
+              <p class="partner-bio text-center my-3">Currently living in Colorado. Lover of art,languages and travelling.</p>
+  
 
           </div>
-          <div class="col-lg-3 partner-container">
-
+          <div class="col-md-3 col-lg-3 partner-container">
+              <div class="partner-image-parent px-4 py-4">
+                  <img class="partner-image"src="/images/partner3.jpg" alt="Partner 1">
+                  <div id="svgp3" class="partner-svg">
+                    <img src="/images/camera.svg" alt="camera">
+                  </div>
+              </div>
+              <p class="partner-name text-center mb-3">Diana Wells</p>
+              <p class="partner-bio text-center my-3">Living in Athens, Greece. I love black and white classics, chillout music and green tea.</p>
+  
           </div>
-          <div class="col-lg-3 partner-container"></div>
+          <div class="col-md-3 col-lg-3 partner-container">
+              <div class="partner-image-parent px-4 py-4">
+                  <img class="partner-image"src="/images/partner4.jpg" alt="Partner 1">
+                  <div id="svgp4" class="partner-svg">
+                    <img src="/images/airplane.svg" alt="airplane">
+                  </div>
+              </div>
+              <p class="partner-name text-center mb-3">Christopher Pierce</p>
+              <p class="partner-bio text-center my-3">Starwars Fanatic. I have a persistant enthusiasm to create new things.</p>
+  
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-12 partner-btn-container">
+            <a class="btn partner-btn" href="">see other partners</a>
+          </div>
         </div>
       </div>
     </section>
