altered the src path of images.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--Custom CSS-->
 <link rel="stylesheet" type="text/css" href="../css/style.css">
 
-<link rel="shortcut icon" type="image/png" href="../images/favicon.png">
+<link rel="shortcut icon" type="image/png" href="..images/favicon.png">
     <title>DreamShare</title>
 </head>
 <body>
@@ -51,9 +51,9 @@
         <div class="row">
           <div class="col-md-3 col-lg-3 partner-container">
             <div class="partner-image-parent px-4 py-4">
-                <img class="partner-image"src="/images/partner1.jpg" alt="Partner 1">
+                <img class="partner-image"src="images/partner1.jpg" alt="Partner 1">
                 <div id="svgp1" class="partner-svg">
-                  <img src="/images/music.svg" alt="music">
+                  <img src="images/music.svg" alt="music">
                 </div>
             </div>
             <p class="partner-name text-center mb-3">Bradley Hunter</p>
@@ -62,9 +62,9 @@
           </div>
           <div class="col-md-3 col-lg-3 partner-container">
               <div class="partner-image-parent px-4 py-4">
-                  <img class="partner-image"src="/images/partner2.jpg" alt="Partner 1">
+                  <img class="partner-image"src="images/partner2.jpg" alt="Partner 1">
                   <div id="svgp2" class="partner-svg">
-                    <img src="/images/brush.svg" alt="brush">
+                    <img src="images/brush.svg" alt="brush">
                   </div>
               </div>
               <p class="partner-name text-center mb-3">Marie Benett</p>
@@ -74,9 +74,9 @@
           </div>
           <div class="col-md-3 col-lg-3 partner-container">
               <div class="partner-image-parent px-4 py-4">
-                  <img class="partner-image"src="/images/partner3.jpg" alt="Partner 1">
+                  <img class="partner-image"src="images/partner3.jpg" alt="Partner 1">
                   <div id="svgp3" class="partner-svg">
-                    <img src="/images/camera.svg" alt="camera">
+                    <img src="images/camera.svg" alt="camera">
                   </div>
               </div>
               <p class="partner-name text-center mb-3">Diana Wells</p>
@@ -85,9 +85,9 @@
           </div>
           <div class="col-md-3 col-lg-3 partner-container">
               <div class="partner-image-parent px-4 py-4">
-                  <img class="partner-image"src="/images/partner4.jpg" alt="Partner 1">
+                  <img class="partner-image"src="images/partner4.jpg" alt="Partner 1">
                   <div id="svgp4" class="partner-svg">
-                    <img src="/images/airplane.svg" alt="airplane">
+                    <img src="images/airplane.svg" alt="airplane">
                   </div>
               </div>
               <p class="partner-name text-center mb-3">Christopher Pierce</p>
@@ -112,31 +112,31 @@
       </div>
       <div class="row gallery-row1">
         <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
-          <a href=""> <img src="/images/block1Sports.jpg"></a>
+          <a href=""> <img src="images/block1Sports.jpg"></a>
           <h3 class="image-heading text-center">Sports</h3>
         </div>
         <div class=" col-md-4 col-lg-4 px-3 py-3 image-container">
-            <a href=""><img src="/images/block2Wellness.jpg"></a>
+            <a href=""><img src="images/block2Wellness.jpg"></a>
             <h3 class="image-heading text-center">Wellness and Health</h3>
         </div>
         <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
-            <a href=""><img src="/images/block3Expeditions.jpg"></a>
+            <a href=""><img src="images/block3Expeditions.jpg"></a>
             <h3 class="image-heading text-center">Expeditions</h3>
         </div>
         <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
-            <a href=""><img src="/images/block4Games.jpg"></a>
+            <a href=""><img src="images/block4Games.jpg"></a>
             <h3 class="image-heading text-center">Games</h3>
         </div>
         <div class="col-md-8 col-lg-8 px-3 py-3 image-container">
-            <a href=""><img src="/images/block5Culture.jpg"></a>
+            <a href=""><img src="images/block5Culture.jpg"></a>
             <h3 class="image-heading text-center">Culture and Education</h3>
         </div>
         <div class="col-md-8 col-lg-8 px-3 py-3 image-container">
-            <a href=""><img src="/images/block6Beauty.jpg"></a>
+            <a href=""><img src="images/block6Beauty.jpg"></a>
             <h3 class="image-heading text-center">Beauty and Relaxation</h3>
         </div>
         <div class="col-md-4 col-lg-4 px-3 py-3 image-container">
-            <a href=""><img src="/images/block7Travelling.jpg"></a>
+            <a href=""><img src="images/block7Travelling.jpg"></a>
             <h3 class="image-heading text-center">Travelling</h3>
         </div>
 
