src stylesheet changed

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <!--Font awesome-->
 <script src="https://kit.fontawesome.com/0cd95c0d58.js" crossorigin="anonymous"></script>
 <!--Custom CSS-->
-<link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
-<link rel="shortcut icon" type="image/png" href="..images/favicon.png">
+<link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <title>DreamShare</title>
 </head>
 <body>
