src tags changed. landing page next

--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
                       </ul>
                     </div>
                   </nav>
+    <div class="container ">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1 class="main-heading">
+            SHARE YOUR 
+          </h1>
+          <h1 class="main-heading">
+              HOLIDAY DREAMS 
+          </h1>
+          <p class="landing-text">
+            And find the perfect partner to fulfill it
+          </p>
+          <a href="" class="btn landing-btn">
+            Find your holiday partner
+          </a>
+        </div>
+      </div>
+    </div>
 
     </header>
     <!--About US SECTION STARTS HERE-->
@@ -96,7 +114,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-12 partner-btn-container">
+          <div class="col-12 partner-btn-container my-5">
             <a class="btn partner-btn" href="">see other partners</a>
           </div>
         </div>
