--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--Custom CSS-->
 <link rel="stylesheet" type="text/css" href="css/style.css">
 
-<link rel="shortcut icon" type="image/png" href="images/favicon.png">
+<!-- <link rel="shortcut icon" type="image/png" href="images/favicon.png"> -->
     <title>DreamShare</title>
 </head>
 <body> 
@@ -22,27 +22,36 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-          <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
+          <div class="collapse navbar-collapse" id="navbarResponsive"style="z-index: 99;">
+            <ul id="ul-navbar"class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#">Home
-                      <span class="sr-only">(current)</span>
+                <a class="nav-link" href="#">Activities
+                      <!-- <span class="sr-only">(current)</span> -->
                     </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Partners</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Services</a>
+                <a class="nav-link" href="#">Blog</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Log in</a>
+              </li>
+              <li id="signup-link" class="nav-item">
+                <a class="nav-link" href="#">Sign up</a>
+              </li>
+              <li id="signup-btn" class="nav-item">
+                <a class="nav-link btn nav-btn" href="#">Sign up</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    <div class="container pt-5">
+    <div class="container landing-text-container">
       <div class="row">
         <div class="col-12 text-center ">
           <h1 class="main-heading">
@@ -225,5 +234,6 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
